--- a/style.scss
+++ b/style.scss
@@ -97,7 +97,7 @@ body {
   height: 2rem;
   border-radius:50%;
   background-color:$pr2 ;
-  background-image: url(/../images/icon-slider.svg);
+  background-image: url(../images/icon-slider.svg);
   background-repeat: no-repeat;
   background-position: center center;
   box-shadow: 0px 13px 18px hsl(174, 77%, 80%);
