--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,7 @@ $neu6: hsl(227, 35%, 25%); /* Dark Desaturated Blue (Text & CTA Background) */
 body {
   font-family: "Manrope", sans-serif;
   background-color: $neu2;
-  background-image: url(/../images/bg-pattern.svg);
+  background-image: url(../images/bg-pattern.svg);
   background-position: top center;
   background-repeat: no-repeat;
   background-size: 100%;
